--- a/_notebooks/2024-02-25-CSAFRQ-2015-3.ipynb
+++ b/_notebooks/2024-02-25-CSAFRQ-2015-3.ipynb
@@ -7,25 +7,285 @@
     "---\n",
     "layout: post\n",
     "title: APCSA 2015 Question 3\n",
-    "description:\n",
     "courses: { csa: {week: 24} }\n",
     "categories: []\n",
     "type: hacks\n",
     "toc: true\n",
+    "comments: true\n",
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Question 3:\n",
+    "A two-dimensional array of integers in which most elements are zero is called a sparse array. Because most elements have a value of zero, memory can be saved by storing only the non-zero values along with their row and column indexes. The following complete SparseArrayEntry class is used to represent non-zero elements in a sparse array. A SparseArrayEntry object cannot be modified after it has been constructed.\n",
+    "\n",
+    "\n",
+    "public class SparseArrayEntry \n",
+    "{ \n",
+    " /** The row index and column index for this entry in the sparse array */ \n",
+    " private int row; \n",
+    " private int col; \n",
+    " /** The value of this entry in the sparse array */ \n",
+    " private int value; \n",
+    " /** Constructs a SparseArrayEntry object that represents a sparse array element with row index r and column index c, containing value v.\n",
+    " **/ \n",
+    " public SparseArrayEntry(int r, int c, int v) \n",
+    " { \n",
+    " row = r; \n",
+    " col = c; \n",
+    " value = v; \n",
+    " } \n",
+    " /** Returns the row index of this sparse array element. */ \n",
+    " public int getRow() \n",
+    " { return row; } \n",
+    " /** Returns the column index of this sparse array element. */ \n",
+    " public int getCol() \n",
+    " { return col; } \n",
+    " /** Returns the value of this sparse array element. */ \n",
+    " public int getValue() \n",
+    " { return value; } \n",
+    "}\n",
+    "\n",
+    "The SparseArray class represents a sparse array. It contains a list of SparseArrayEntry objects, each  of which represents one of the non-zero elements in the array. The entries representing the non-zero elements are stored in the list in no particular order. Each non-zero element is represented by exactly one entry in the list. \n",
+    "\n",
+    "public class SparseArray \n",
+    "\n",
+    " /** The number of rows and columns in the sparse array. */ \n",
+    " private int numRows; \n",
+    " private int numCols; \n",
+    " /** The list of entries representing the non-zero elements of the sparse array. Entries are stored in the \n",
+    "* list in no particular order. Each non-zero element is represented by exactly one entry in the list.\n",
+    " */ \n",
+    " private List<SparseArrayEntry> entries; \n",
+    " /** Constructs an empty SparseArray. */ \n",
+    " public SparseArray() \n",
+    " { entries = new ArrayList<SparseArrayEntry>(); } \n",
+    " /** Returns the number of rows in the sparse array. */ \n",
+    " public int getNumRows() \n",
+    " { return numRows; } \n",
+    " /** Returns the number of columns in the sparse array. */ \n",
+    " public int getNumCols() \n",
+    " { return numCols; } \n",
+    " /** Returns the value of the element at row index row and column index col in the sparse array.\n",
+    "* Precondition: 0  row < getNumRows()\n",
+    " * 0  col < getNumCols()\n",
+    " */ \n",
+    " public int getValueAt(int row, int col) \n",
+    " { /* to be implemented in part (a) */ } \n",
+    " /** Removes the column col from the sparse array. \n",
+    "* Precondition: 0  col < getNumCols()\n",
+    " */ \n",
+    " public void removeColumn(int col) \n",
+    " { /* to be implemented in part (b) */ } \n",
+    " // There may be instance variables, constructors, and methods that are not shown\n",
+    "\n",
+    "The following table shows an example of a two-dimensional sparse array. Empty cells in the table indicate zero values.\n",
+    "The sample array can be represented by a SparseArray object, sparse, with the following instance variable values. The items in entries are in no particular order; one possible ordering is shown below.\n",
+    "\n",
+    "## Part A:\n",
+    "Write the SparseArray method getValueAt. The method returns the value of the sparse array element at a given row and column in the sparse array. If the list entries contains an entry with the specified row and column, the value associated with the entry is returned. If there is no entry in entries corresponding to the specified row and column, 0 is returned. In the example above, the call sparse.getValueAt(3, 1) would return -9, and sparse.getValueAt(3, 3) would return 0. \n",
+    "\n",
+    "## Part B:\n",
+    "Write the SparseArray method removeColumn. After removing a specified column from a sparse array: \n",
+    "- All entries in the list entries with column indexes matching col are removed from the list.\n",
+    "- All entries in the list entries with column indexes greater than col are replaced by entries with column indexes that are decremented by one (moved one column to the left). \n",
+    "- The number of columns in the sparse array is adjusted to reflect the column removed.\n",
+    "The sample object sparse from the beginning of the question is repeated for your convenience. \n",
+    "\n",
+    "When sparse has the state shown above, the call sparse.removeColumn(1) could result in\n",
+    "sparse having the following values in its instance variables (since entries is in no particular order, it \n",
+    "would be equally valid to reverse the order of its two items). The shaded areas below show the changes.\n",
+    "\n",
+    "## Class information:\n",
+    "public class SparseArrayEntry\n",
+    "\n",
+    "public SparseArrayEntry(int r, int c, int v) \n",
+    "public int getRow() \n",
+    "public int getCol() \n",
+    "public int getValue() \n",
+    "\n",
+    "public class SparseArray\n",
+    "\n",
+    "private int numRows \n",
+    "private int numCols \n",
+    "private List<SparseArrayEntry> entries \n",
+    "public int getNumRows() \n",
+    "public int getNumCols() \n",
+    "public int getValueAt(int row, int col) \n",
+    "public void removeColumn(int col) \n",
+    "\n",
+    "\n",
+    "## Question Type: \n",
+    "- Arraylists and 2D Arrays\n",
+    "\n",
+    "## Overall Objectives:\n",
+    "- Create a `getValueAt` method\n",
+    "- Create a `removeColumn` method\n",
+    "- Create a `SparseArrayEntry` class that has variables and constructors and displays the SparseArray\n",
+    "- Create a `SparseArray` class that takes the values we dont't want and gets rid of them and returns a new complete array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Sparse Array:\n",
+      "0\t0\t0\t0\t0\t\n",
+      "0\t5\t0\t0\t4\t\n",
+      "1\t0\t0\t0\t0\t\n",
+      "0\t-9\t0\t0\t0\t\n",
+      "\n",
+      "Sparse Array after removing column 1:\n",
+      "0\t0\t0\t0\t\n",
+      "0\t0\t0\t4\t\n",
+      "1\t0\t0\t0\t\n",
+      "0\t0\t0\t0\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "import java.util.List;\n",
+    "\n",
+    "class SparseArrayEntry {\n",
+    "    private int row;\n",
+    "    private int col;\n",
+    "    private int value;\n",
+    "\n",
+    "    public SparseArrayEntry(int r, int c, int v) {\n",
+    "        row = r; // The constructors for the SparseArrayEntry\n",
+    "        col = c;\n",
+    "        value = v;\n",
+    "    }\n",
+    "\n",
+    "    public int getRow() {\n",
+    "        return row;\n",
+    "    }\n",
+    "\n",
+    "    public int getCol() {\n",
+    "        return col;\n",
+    "    }\n",
+    "\n",
+    "    public int getValue() {\n",
+    "        return value;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SparseArray {\n",
+    "    private int numRows; // Variables\n",
+    "    private int numCols;\n",
+    "    private List<SparseArrayEntry> entries;\n",
+    "\n",
+    "    public SparseArray() {\n",
+    "        numRows = 4;\n",
+    "        numCols = 5;\n",
+    "        entries = new ArrayList<>();\n",
+    "    }\n",
+    "\n",
+    "    public int getNumRows() {\n",
+    "        return numRows;\n",
+    "    }\n",
+    "\n",
+    "    public int getNumCols() {\n",
+    "        return numCols;\n",
+    "    }\n",
+    "\n",
+    "    public int getValueAt(int row, int col) { // A (Create a `getValueAt` method)\n",
+    "        for (SparseArrayEntry entry : entries) {\n",
+    "            if (entry.getRow() == row && entry.getCol() == col) {\n",
+    "                return entry.getValue();\n",
+    "            }\n",
+    "        }\n",
+    "        return 0;\n",
+    "    }\n",
+    "\n",
+    "    public void removeColumn(int col) { // B (Create a `removeColumn` method)\n",
+    "        List<SparseArrayEntry> updatedEntries = new ArrayList<>();\n",
+    "\n",
+    "        for (SparseArrayEntry entry : entries) {\n",
+    "            if (entry.getCol() == col) { \n",
+    "                continue;\n",
+    "            } else if (entry.getCol() > col) {\n",
+    "                updatedEntries.add(new SparseArrayEntry(entry.getRow(), entry.getCol() - 1, entry.getValue()));\n",
+    "            } else {\n",
+    "                updatedEntries.add(entry);\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        entries = updatedEntries;\n",
+    "        numCols--;\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        SparseArray sparse = new SparseArray();\n",
+    "\n",
+    "        sparse.entries.add(new SparseArrayEntry(1, 4, 4));\n",
+    "        sparse.entries.add(new SparseArrayEntry(2, 0, 1));\n",
+    "        sparse.entries.add(new SparseArrayEntry(3, 1, -9));\n",
+    "        sparse.entries.add(new SparseArrayEntry(1, 1, 5));\n",
+    "\n",
+    "        System.out.println(\"Sparse Array (original):\"); // original array\n",
+    "        for (int i = 0; i < sparse.getNumRows(); i++) {\n",
+    "            for (int j = 0; j < sparse.getNumCols(); j++) {\n",
+    "                System.out.print(sparse.getValueAt(i, j) + \"\\t\");\n",
+    "            }\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "\n",
+    "        sparse.removeColumn(1);\n",
+    "\n",
+    "        System.out.println(\"\\nSparse Array (updated):\"); // updated array\n",
+    "        for (int i = 0; i < sparse.getNumRows(); i++) {\n",
+    "            for (int j = 0; j < sparse.getNumCols(); j++) {\n",
+    "                System.out.print(sparse.getValueAt(i, j) + \"\\t\");\n",
+    "            }\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "SparseArray.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reflection: \n",
+    "- This question by far was the hardest question out of all the questions that we had and it was one that I really struggled with and I had to get lots of external help\n",
+    "- One of my main challenges was that I didn't know what the heck a SpareArray and I spent more the college board alloted time trying to understand what the SparseArray was and how does it work, but eventually I figured out that the SparseArray is basically a way to store and represent large arrays with lots of different elements and they are used to store lots of default values and typically get rid of the non default values out of the array \n",
+    "- One thing that was pretty easy tho was setting up the constructors and variables but I struggled a lot afterwards trying to figure out how to work them.\n",
+    "- I also easily understood that the columns and rows were preset and all I had to do was manipulate this sparse array \n",
+    "- Part A was pretty alright to do, you just simply had to write a function that iterated through the different rows and columns and return either 0 or the value that was found \n",
+    "- Part B was where I struggled a lot, I understood that in order to make the remove column method, I would have to make it so you can preset the method so that it gets rid of a certain column and then remove that column but what I struggled with in particluar was how to update the column and make it get rid of the entry and move all the array entries down a column"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "17.0.9+9-Ubuntu-120.04"
   }
  },
  "nbformat": 4,
