images and also reflection

--- a/_notebooks/2024-02-25-CSAFRQ-2015-2.ipynb
+++ b/_notebooks/2024-02-25-CSAFRQ-2015-2.ipynb
@@ -96,6 +96,19 @@
     "- This frq was honestly really fun to work with because I felt that it was kind of fun seeing and creating the algorithm that is used for wordle\n",
     "- This frq was pretty easy to understand, you just use the stringbuilder and a loop to append and create the outputs and overall it was really more of a fun frq and didn't feel like I was doing a college board frq"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"JishnuS420/BlogCSA\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-dark\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
+   ]
   }
  ],
  "metadata": {
