--- a/_notebooks/2024-02-25-CSAFRQ-2015-3.ipynb
+++ b/_notebooks/2024-02-25-CSAFRQ-2015-3.ipynb
@@ -271,6 +271,19 @@
     "- Part A was pretty alright to do, you just simply had to write a function that iterated through the different rows and columns and return either 0 or the value that was found \n",
     "- Part B was where I struggled a lot, I understood that in order to make the remove column method, I would have to make it so you can preset the method so that it gets rid of a certain column and then remove that column but what I struggled with in particluar was how to update the column and make it get rid of the entry and move all the array entries down a column"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"JishnuS420/BlogCSA\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-dark\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
+   ]
   }
  ],
  "metadata": {
