--- a/_notebooks/2024-02-25-CSAFRQ-2015-4.ipynb
+++ b/_notebooks/2024-02-25-CSAFRQ-2015-4.ipynb
@@ -142,6 +142,19 @@
     "- This frq in particular was pretty easy to do and wasn't too challenging to complete and honestly I give that all to my CSP experience, the interface uses a lot of inheritance and I still remember the things that I have taught during that student lesson \n",
     "- This frq uses a lot of constructors and variables and those are pretty easy to do so this frq wasn't that bad and was really easy to understand"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"JishnuS420/BlogCSA\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-dark\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
+   ]
   }
  ],
  "metadata": {
