--- a/_notebooks/2024-02-25-CSAFRQ-2015-Connections.ipynb
+++ b/_notebooks/2024-02-25-CSAFRQ-2015-Connections.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "![]({{ site.baseurl }}/images/connection4.png)\n",
     "\n",
-    "Going into the nex trimester, I see potential that we could take this file and implement it with our possible League/tournamnets feature and also implement it with the recommendations feature to help perform CRUD operations in those features.\n",
+    "Going into the next trimester, I see potential that we could take this file and implement it with our possible League/tournamnets feature and also implement it with the recommendations feature to help perform CRUD operations in those features.\n",
     "\n",
     "## Final Thoughts and Reflection:\n",
     "\n",
