--- a/_notebooks/2024-03-19-POJOlesson.ipynb
+++ b/_notebooks/2024-03-19-POJOlesson.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -103,7 +103,7 @@
    "metadata": {},
    "source": [
     "### One important thing to note:\n",
-    "- POJOs aren't always required for the CSA FRQ and sometimes aren't even in the requirements for the question, however, it is something that you should know and should have as one of you different techniques to approaching code especially when it comes to working code using OOP and also serves a good way to understand/show understanding of Java better"
+    "- POJOs aren't always required for the CSA FRQ and sometimes aren't even in the requirements for the question, however, it is something that you should know and should have as one of you different techniques to approaching code especially when it comes to working code using OOP and also serves a good way to understand/show understanding of Java better and also, the AP Exam always accepts the initialization of variable through POJO and its a good habit to have"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "\n",
     "Here is a diagram showing a general idea of how it works:\n",
     "\n",
-    "![Serialization and Deserialization Diagram](link)\n",
+    "![Serialization and Deserialization Diagram](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/_notebooks/Serialization-Deserialization.drawio.svg)\n",
     "\n",
     "While not on the AP Exam, they are a very important part of Java programming and a basic understanding can help alot"
    ]
@@ -129,7 +129,77 @@
    "source": [
     "## Encapsulation and Access Control\n",
     "\n",
-    "- Tasks may assess your understanding of encapsulation by requiring appropriate use of access modifiers (public, private, protected)."
+    "- One of the things that the AP Exam commonly makes sure that you know and have during the FRQ section in teh encapsulation and access control \n",
+    "\n",
+    "### Encapsulation:\n",
+    "\n",
+    "- Encapsulation is one of the 4 main OOP concepts that the AP CSA Exams tests on (the others are inheritance, polymorphism and abstraction)\n",
+    "\n",
+    "- Encapsulation is done through using classes and access modifiers\n",
+    "\n",
+    "- Ways you might be asked to do this or could see this is through defining private fields and providing setters and getters and other public methods to access and modify those fields\n",
+    "\n",
+    "- Encapsulation allows for protection against other parts of the program by preventing them to modify it\n",
+    "\n",
+    "### Access Control \n",
+    "\n",
+    "- Determines what is visible and what isn't in a program and protects data integrity \n",
+    "\n",
+    "- The exam might ask questions that will cause you to decide and apply the right access modifiers (private, public) and the MC section might even test your ability to determine which ones are incorrect and why\n",
+    "\n",
+    "- Declaring the right Access Controls can account for 4/10 of the points on the FRQ and so it is very important that you understand what and why each access control is used\n",
+    "\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "\n",
+    "public class Sign {\n",
+    "    private String message; // private variables, encapsulates the 'Sign' object, hiding it from other classes\n",
+    "    private int lineWidth;\n",
+    "\n",
+    "    public Sign(String message, int lineWidth) { // Constructors using POJOs\n",
+    "        this.message = message;\n",
+    "        this.lineWidth = lineWidth;\n",
+    "    }\n",
+    "\n",
+    "    public int numberOfLines() { // public method that provides controlled access to the private data members\n",
+    "        int lines = message.length() / lineWidth;\n",
+    "\n",
+    "        if (message.length() % lineWidth > 0)\n",
+    "            lines++;\n",
+    "\n",
+    "        return lines;\n",
+    "    }\n",
+    "\n",
+    "    public String getLines() { // public method that provides controlled access to the private data members\n",
+    "        if (message.length() == 0)\n",
+    "            return null;\n",
+    "\n",
+    "        String lines = \"\";\n",
+    "        String messageRemaining = message;\n",
+    "\n",
+    "        while (messageRemaining.length() > lineWidth) {\n",
+    "            lines += messageRemaining.substring(0, lineWidth);\n",
+    "            lines += \";\";\n",
+    "            messageRemaining = messageRemaining.substring(lineWidth);\n",
+    "        }\n",
+    "\n",
+    "        lines += messageRemaining;\n",
+    "\n",
+    "        return lines;\n",
+    "    }\n",
+    "}"
    ]
   }
  ],
