--- a/_notebooks/2024-03-19-Student-Lessons-1.ipynb
+++ b/_notebooks/2024-03-19-Student-Lessons-1.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "toc: true\n",
     "comments: true\n",
-    "layout: notebook\n",
+    "layout: post\n",
     "title: Workshop 1\n",
     "description: Hacks\n",
     "courses: { csa: {week: 26} }\n",
